experimenting with themes

--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -4,3 +4,13 @@ body, html{
 	font-family: "Roboto";
 	background-color: #fafafa;
 }
+
+a{
+	text-decoration: none;
+
+	&:visited,
+	&:active,
+	&:focus{
+		color: inherit
+	}
+}
